@startuml
skinparam classAttributeIconSize 0

package "Controller" #DDDDDD {
class ApplicationPOT
{
  +static getInstance()
  +getPlatform()
  +getCurrentSession()
}

class UserSession
{
  +getCurrentUserEmail()
}
class KnowDeliveryController{
+getOrderByCour()
}
}
package "UI" #DDDDDD {
class KnowDeliveryUI{

}
}
package "Model" #DDDDDD {
class Platform {
  -String designation
  +OrdersRegistration getOrdReg()
}

class OrdersRegistration{
+getOrderByCourier(email)
}
class Database{
}
}

KnowDeliveryUI ..> KnowDeliveryController
KnowDeliveryController ..> Platform
KnowDeliveryController ..> ApplicationPOT
KnowDeliveryController ..> UserSession
Platform "1" --> "1" OrdersRegistration : has
OrdersRegistration "1" --> "1" Database : connects to

@enduml